sdm710-common:Enable config_vibrateOnIconAnimation
* Provides a Better haptic feedback while opening an app

Signed-off-by: Cykeek <Cykeek@proton.me>
Signed-off-by: kssrao13882 <kssrao13882@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -439,4 +439,8 @@
 
     <!-- Whether to cancel fingerprint operation if not idle -->
     <bool name="config_fpCancelIfNotIdle">true</bool>
+    
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
 </resources>
