sdm710-common: overlay: Enable QR scanner shortcut in lock screen
Ref: https://blog.esper.io/android-13-deep-dive/#qr_code_shortcut

Signed-off-by: Sonal Singh <sonal.singh.19993@gmail.com>
Signed-off-by: kssrao13882 <kssrao13882@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -516,4 +516,7 @@
     <integer name="config_sysCPUTempMultiplier">1000</integer>
     <integer name="config_sysBatteryTempMultiplier">10</integer>
 
+    <!-- Whether or not to enable the lock screen entry point for the QR code scanner. -->
+    <bool name="config_enableQrCodeScannerOnLockScreen">true</bool>
+
 </resources>
